feat: Added JWT configuration to the project, with authorization and authentication

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "http://localhost:5028",
+    "Audience": "http://localhost:5028",
+    "SigningKey": "b6d8a188a2bb506b9f5a21b2cdd9c137"
+  }
 }
